<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/measurement_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/measurement_date"
            style="@style/addChildDateText"
            android:paddingStart="3dp"
            android:paddingTop="15dp"
            android:layout_marginTop="60dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingStart="5dp"
            android:background="#756867"/>

        <!-- Hint -->
        <TextView
            android:id="@+id/weight_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/measurementsHintText"
            android:paddingStart="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/weight_hint"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/measurement_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Hint -->
        <TextView
            android:id="@+id/Height_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/measurementsHintText"
            android:paddingStart="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/height_hint"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/measurement_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Hint -->
        <TextView
            android:id="@+id/head_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/measurementsHintText"
            android:paddingStart="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/head_hint"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/measurement_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/save_measurement_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        style="@style/AppTheme"/>

</RelativeLayout>