<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/child_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/child_name"
            android:inputType="text"
            android:hint="@string/child_name"
            android:textSize="24sp"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/child_dob_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/child_dob"
            style="@style/addChildDateText"
            android:paddingStart="3dp"
            android:paddingTop="15dp"
            android:layout_marginTop="3dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingStart="5dp"
            android:background="#756867"/>

        <TextView
            android:id="@+id/child_due_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginTop="4dp"
            android:hint="@string/child_dob"
            style="@style/addChildDateText"
            android:paddingStart="3dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#756867"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        style="@style/AppTheme"/>

</RelativeLayout>